...
Widget buildBottomNavigationBar({required BuildContext context, required String currentRoute}) {
  return BottomAppBar(
    color: Colors.transparent,
    child: Row(
      mainAxisAlignment: MainAxisAlignment.spaceAround,
      children: [
        buildNavItem(context, 'Journal', 'journal', currentRoute == 'journal'),
        buildNavItem(context, 'Pillbox', 'pillbox', currentRoute == 'pillbox'),
        buildNavItem(context, 'Mindfulness', 'mindfulness',
            currentRoute == 'mindfulness' || currentRoute == 'breath' || currentRoute == 'meditation'),
        buildNavItem(context, 'Wellness', 'wellness', currentRoute == 'wellness'),
      ],
    ),
  );
}

GestureDetector buildNavItem(BuildContext context, String label, String route, bool isSelected) {
...
